# notion_meta_learning

./: .gitignore  README.md
notion_sync_tool/: .env.example  .gitignore  README.md  config.example.toml  pyproject.toml
notion_sync_tool/scripts/: migrate_sqlite_to_postgres.py
notion_sync_tool/src/notion_sync_tool/: __init__.py  agent_utils.py  agent_workflow.py  cli.py  config.py  enrich_service.py  gemini_agent.py  knowledge_agent.py  knowledge_workflow.py  logging_utils.py  notion_gateway.py  notion_helpers.py  notion_ids.py  postgres_store.py  sync_service.py  web_app.py
notion_sync_tool/src/notion_sync_tool/store/: __init__.py  base.py  error_mixin.py  knowledge_mixin.py  sync_mixin.py
notion_sync_tool/src/notion_sync_tool/templates/: base.html  batch_task_progress.html  index.html  knowledge_index.html  knowledge_run_detail.html  knowledge_suggestion_detail.html  knowledge_suggestions.html  run_detail.html  suggestion_detail.html  suggestions.html
notion_sync_tool/src/notion_sync_tool/web/: app.py  background.py  helpers.py  routes_errors.py  routes_knowledge.py
notion_sync_tool/tests/: test_agent_utils.py  test_agent_workflow_title.py  test_config.py  test_enrich_service_helpers.py  test_knowledge_attachment_helpers.py  test_notion_gateway_table.py  test_notion_ids.py  test_postgres_store_helpers.py  test_sync_service_incremental.py
