[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notion-sync-tool"
version = "0.1.0"
description = "Standalone Notion -> PostgreSQL sync and workflow review updater"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "notion-client>=2.2.1",
  "google-genai>=1.63.0",
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
  "jinja2>=3.1.6",
  "python-multipart>=0.0.20",
  "python-dotenv>=1.1.1",
  "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
notion-sync-tool = "notion_sync_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
